--- a/index.html
+++ b/index.html
@@ -1,150 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+     <title>Document</title>
 </head>
-<body>
-<style>
-    .centerX{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-</style>
-<div class="container">
-    <div class="row align-items-center text-center">
-        <!-- <div class="col justify-content-md-center border border-5 border-dark"> -->
-            <div class="row g-0">
-                <div class="col"></div>
-                <div class="col">A</div>
-                <div class="col">B</div>
-                <div class="col">C</div>
-                <div class="col">D</div>
-                <div class="col">E</div>
-                <div class="col">F</div>
-                <div class="col">G</div>
-                <div class="col">H</div>
-                <div class="col"></div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">8</div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">8</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">7</div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">7</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">6</div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">6</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">5</div>
-                <div class="col bg-light border border-1 border-dark" ratio ratio-1x1></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">5</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">4</div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">4</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">3</div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">3</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">2</div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1k"></div>
-                <div class="col ratio ratio-1x1 centerX">2</div>
-            </div>
-            <div class="row g-0">
-                <div class="col ratio ratio-1x1 centerX">1</div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col bg-light border border-1 border-dark ratio ratio-1x1"></div>
-                <div class="col bg-dark ratio ratio-1x1"></div>
-                <div class="col ratio ratio-1x1 centerX">1</div>
-            </div>
-            <div class="row g-0">
-                <div class="col"></div>
-                <div class="col">A</div>
-                <div class="col">B</div>
-                <div class="col">C</div>
-                <div class="col">D</div>
-                <div class="col">E</div>
-                <div class="col">F</div>
-                <div class="col">G</div>
-                <div class="col">H</div>
-                <div class="col"></div>
-            </div>
-        <!-- </div> -->
-    </div>
-</div>
-
-
-<script src="script.js"></script>
-<!--<script src="user_profile.js"></script>-->
-<!--<script src="app.js"></script>-->
-
-</body>
+<body id="root" class="d-flex justify-content-center h-100 align-items-center">
+  <!-- <button type="button" class="btn btn-secondary me-3"  data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+    Popover on top
+  </button>
+  <button type="button" class="btn btn-secondary me-3 "  data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
+    Popover on right
+  </button>
+  <button type="button" class="btn btn-secondary me-3"  data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+    Popover on bottom
+  </button>
+  <button type="button" class="btn btn-secondary me-3"  data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
+    Popover on left
+  </button> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
+<script>
+  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})
+</script>
+<script src="paginator.js"></script>
+<script src="index.js"></script>
+  </body>
 </html>
